# openzl-wasm

./: .gitignore  .gitmodules  .prettierignore  CMakeLists.txt  LICENSE  README.md  eslint.config.js  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
benchmarks/: run.ts
patches/: fix-allocation-alignment.patch
scripts/: build_ts.ts  build_wasm.sh  prepare_dist.ts
src/: bindings.cpp  index.ts
tests/: api.test.ts  lifecycle.test.ts  openzl.test.ts
